# forte_on_kos

./: .gitmodules  CMakeLists.txt  README.md  cross-build.sh
common/: common.c  common.h  file_names.h
einit/: CMakeLists.txt
einit/src/: external.psl  init.yaml.in  security.psl  security_arm.psl  security_x86.psl  trusted.psl
env/src/: env.c
forte_patch/: forte4kos.patch
resources/edl/: Forte.edl  VfsUser.edl
resources/files/: forte.fboot
resources/files/fbootsAccumulator/: Proj1_FORTE_PC.fboot  forte_orig.fboot
vfs_user/: CMakeLists.txt
